# conclave

./: .gitignore  CLAUDE.md  POD_FILTERING_FEATURE.md  start-conclave.sh
conclave_api/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  WEBSOCKET_PROTOCOL.md  fly.toml
conclave_api/migrations/: 20240628000000_initial_tables.sql
conclave_api/src/: auth.rs  clerk.rs  database.rs  errors.rs  handlers.rs  main.rs  models.rs  state.rs  websocket.rs
conclave_web/: .env.example  README.md  bun.lockb  next.config.ts  package-lock.json  package.json
conclave_web/src/: middleware.ts
conclave_web/src/app/: globals.css  layout.tsx  page.tsx
conclave_web/src/app/history/: page.tsx
conclave_web/src/components/: CommanderDamageMatrix.tsx  CommanderDamageTracker.tsx  auth-redirect-handler.tsx  game-page.tsx  header.tsx  landing-page.tsx  match-history.tsx  pod-filter.tsx  user-dashboard.tsx
conclave_web/src/components/game/: commander-damage-tracker.tsx  (+6 more)
conclave_web/src/lib/: api.ts
ios/: Screen.swift
ios/Conclave/: AppEnvironment.swift  ConclaveApp.swift  ConclaveClientManager.swift  ContentView.swift  Screen.swift
ios/Conclave.xcodeproj/: project.pbxproj
ios/Conclave/Theme/: ConclaveTheme.swift
ios/Conclave/Views/: FourPlayerGameView.swift  GameListView.swift  GameSettingsView.swift  HomeScreenView.swift  NavigationRootView.swift  OnlineGameView.swift  UserHealthView.swift  UserSettingsView.swift
ios/ConclaveTests/: ConclaveTests.swift
ios/ConclaveUITests/: ConclaveUITests.swift  ConclaveUITestsLaunchTests.swift
(+20 files in other folders)
