[package]
name = "conclave_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = "0.5.2"
dashmap = "6.1.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_json = "1.0.140"
futures = "0.3.31"
# JWT and Clerk integration
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
once_cell = "1.19"
